--- a/assets/scss/includes/base/_fonts.scss
+++ b/assets/scss/includes/base/_fonts.scss
@@ -1,4 +1,45 @@
 @font-face {
+	font-family: 'PT Sans';
+	src: url('./fonts/PTSans/PTSans-Bold.eot');
+	src: local('PT Sans Bold'), local('PTSans-Bold'), url('./fonts/PTSans/PTSans-Bold.eot?#iefix') format('embedded-opentype'), url('./fonts/PTSans/PTSans-Bold.woff') format('woff'), url('./fonts/PTSans/PTSans-Bold.ttf') format('truetype');
+	font-weight: bold;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'PT Sans';
+	src: url('./fonts/PTSans/PTSans-Italic.eot');
+	src: local('PT Sans Italic'), local('PTSans-Italic'), url('./fonts/PTSans/PTSans-Italic.eot?#iefix') format('embedded-opentype'), url('./fonts/PTSans/PTSans-Italic.woff') format('woff'), url('./fonts/PTSans/PTSans-Italic.ttf') format('truetype');
+	font-weight: normal;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: 'PT Sans';
+	src: url('./fonts/PTSans/PTSans-Regular.eot');
+	src: local('PT Sans'), local('PTSans-Regular'), url('./fonts/PTSans/PTSans-Regular.eot?#iefix') format('embedded-opentype'), url('./fonts/PTSans/PTSans-Regular.woff') format('woff'), url('./fonts/PTSans/PTSans-Regular.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'PT Sans';
+	src: url('./fonts/PTSans/PTSans-BoldItalic.eot');
+	src: local('PT Sans Bold Italic'), local('PTSans-BoldItalic'), url('./fonts/PTSans/PTSans-BoldItalic.eot?#iefix') format('embedded-opentype'), url('./fonts/PTSans/PTSans-BoldItalic.woff') format('woff'), url('./fonts/PTSans/PTSans-BoldItalic.ttf') format('truetype');
+	font-weight: bold;
+	font-style: italic;
+}
+
+@font-face {
+    font-family: 'BankGothicMediumC';
+    src: url('./fonts/BankGothic/BankGothicMediumC.eot');
+    src: url('./fonts/BankGothic/BankGothicMediumC.eot?#iefix') format('embedded-opentype'), url('./fonts/BankGothic/BankGothicMediumC.woff2') format('woff2'), url('./fonts/BankGothic/BankGothicMediumC.woff') format('woff'), url('./fonts/BankGothic/BankGothicMediumC.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
 	font-family: 'Open Sans';
 	src: url('./fonts/OpenSans/OpenSans-SemiBoldItalic.eot');
 	src: local('Open Sans SemiBold Italic'), local('OpenSans-SemiBoldItalic'), url('./fonts/OpenSans/OpenSans-SemiBoldItalic.eot?#iefix') format('embedded-opentype'), url('./fonts/OpenSans/OpenSans-SemiBoldItalic.woff') format('woff'), url('./fonts/OpenSans/OpenSans-SemiBoldItalic.ttf') format('truetype');
