--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -322,7 +322,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 .header .nav .nav-menu .nav-item.dropdown-item .dropdown-menu {
   position: absolute;
-  top: 93px;
   max-width: 240px;
   width: 100%;
   background: #0f2e57;
@@ -536,8 +535,8 @@ h1, h2, h3, h4, h5, h6 {
   color: #ffffff;
 }
 .sidebar .nav .nav-menu .nav-item.dropdown-item .dropdown-menu {
-  display: none;
   padding: 10px;
+  display: none;
 }
 .sidebar .nav .nav-menu .nav-item.dropdown-item .dropdown-menu .nav-item {
   padding: 5px 0;
@@ -545,11 +544,15 @@ h1, h2, h3, h4, h5, h6 {
 .sidebar .nav .nav-menu .nav-item.dropdown-item .dropdown-menu .nav-item .nav-link {
   transition: 0.1s ease;
 }
+.sidebar .nav .nav-menu .nav-item.dropdown-item .dropdown-menu .nav-item .nav-link .icon {
+  transition: 0.3s ease;
+}
 .sidebar .nav .nav-menu .nav-item.dropdown-item .dropdown-menu .nav-item .nav-link:hover, .sidebar .nav .nav-menu .nav-item.dropdown-item .dropdown-menu .nav-item .nav-link.active {
   color: #fff200;
 }
-.sidebar .nav .nav-menu .nav-item.dropdown-item.active .nav-link.dropdown-link .icon {
+.sidebar .nav .nav-menu .nav-item.dropdown-item.active .nav-link .icon {
   transform: rotate(180deg);
+  transition: 0.3s ease;
 }
 .sidebar .nav .nav-menu .nav-item.dropdown-item.active .dropdown-menu {
   display: block;
