--- a/assets/scss/includes/modules/sidebar.scss
+++ b/assets/scss/includes/modules/sidebar.scss
@@ -41,14 +41,18 @@
                 }
 
                 .dropdown-menu {
-                    display: none;
                     padding: 10px;
+                    display: none;
 
                     .nav-item {
                         padding: 5px 0;
                         
                         .nav-link {
                             transition: .1s ease;
+
+                            .icon {
+                                transition: .3s ease;
+                            }
 
                             &:hover, &.active {
                                 color: $color-7;
@@ -58,9 +62,10 @@
                 }
 
                 &.active {
-                    .nav-link.dropdown-link {
+                    .nav-link {
                         .icon {
                             transform: rotate(180deg);
+                            transition: .3s ease;
                         }
                     }
 
