--- a/assets/scss/includes/modules/games.scss
+++ b/assets/scss/includes/modules/games.scss
@@ -40,6 +40,10 @@
             .common-wrap {
                 display: flex;
                 justify-content: space-between;
+
+                .social-row {
+                    flex: 0 0 20%;
+                }
             }
 
             .img-block {
