--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -7,7 +7,10 @@
 @import 'includes/modules/sidebar.scss';
 @import 'includes/modules/home.scss';
 @import 'includes/modules/games.scss';
+@import 'includes/modules/search.scss';
+@import 'includes/modules/manufacturer.scss';
 @import 'includes/modules/news.scss';
 @import 'includes/modules/info.scss';
+@import 'includes/modules/favorites.scss';
 @import 'includes/modules/footer.scss';
 @import 'includes/modules/media.scss';
