--- a/assets/scss/includes/modules/header.scss
+++ b/assets/scss/includes/modules/header.scss
@@ -96,6 +96,7 @@
     }
 
     .nav {
+        position: relative;
         padding-top: 5px;
         padding-bottom: 20px;
 
@@ -208,10 +209,89 @@
         }
     }
 
+    .search {
+        height: 55px;
+        background: linear-gradient(90deg, rgba($color-4, 1) 0%, rgba($color-5, 1) 50%, rgba($color-4, 1) 100%);
+
+        .container {
+            position: relative;
+            display: flex;
+            align-items: center;
+            height: 100%;
+        }
+
+        .search-icon {
+            position: absolute;
+            left: 25px;
+            color: $color-1;
+            z-index: 1;
+        }
+
+        .search-input {
+            max-width: 820px;
+            width: 100%;
+            height: 30px;
+            padding-left: 40px;
+            border: none;
+            border-radius: 250px;
+            color: $color-1;
+            background: rgba($color: $color-10, $alpha: 0.8);
+            outline: none;
+
+            &::placeholder {
+                color: $color-1;
+                opacity: .7;
+            }
+        }
+
+        .telegram {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 30px;
+            height: 30px;
+            margin-left: 30px;
+            border: 1px solid #229ED9;
+            border-radius: 50%;
+
+            .icon {
+                color: #229ED9;
+            }
+        }
+    }
+
     .header__best-games {
         position: relative;
         padding: 5px 0;
         background: linear-gradient(90deg, rgba($color-4, 1) 0%, rgba($color-5, 1) 50%, rgba($color-4, 1) 100%);
+
+        .container {
+            position: relative;
+            overflow: hidden;
+        }
+
+        .swiper-button-next, .swiper-button-prev {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 40px;
+            height: 40px;
+            font-size: 16px;
+            color: #4d97f7;
+            background: linear-gradient(0deg, $color-11 0%, $color-10 100%);
+            border: 1px solid $brd-color-1;
+            border-radius: 5px;
+
+            &::after {
+                font-size: 18px;
+            }
+
+            &:hover {
+                color: #756f00;
+                background: linear-gradient(0deg, #8d9120 0%, $color-7 100%);
+                border: 1px solid $color-7;
+            }
+        }
 
         .row {
             display: flex;
