--- a/assets/scss/includes/modules/games.scss
+++ b/assets/scss/includes/modules/games.scss
@@ -79,6 +79,18 @@
                                 .name {
                                     color: $color-7;
                                 }
+
+                                .value {
+                                    order: 3;
+                                }
+
+                                &:before {
+                                    content: ''; /* Выводим линию */
+                                    border-bottom: 1px dotted $color-10; /* Параметры линии */
+                                    flex-grow: 1; /* Линия занимает всё доступное пространство */
+                                    order: 2; /* Выводим вторым */
+                                    margin: 0 5px; /* Расстояние от текста */
+                                }
                             }
                         }
                     }
@@ -112,7 +124,6 @@
 
                 ul {
                     li {
-                        margin: 10px 0;
                         font-size: 16px;
 
                         &::before {
@@ -123,25 +134,40 @@
 
                 .left-block {
                     ul {
-                        li::before {
-                            content: "\2022";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
-                            color: $color-6; /* Change the color */
-                            font-weight: bold; /* If you want it to be bold */
-                            display: inline-block; /* Needed to add space between the bullet and the text */
-                            width: 1em; /* Also needed for space (tweak if needed) */
+                        li {
+                            margin: 25px 0;
+                            
+                            &::before {
+                                content: "\2022";  /* Add content: \2022 is the CSS Code/unicode for a bullet */
+                                color: $color-6; /* Change the color */
+                                font-weight: bold; /* If you want it to be bold */
+                                display: inline-block; /* Needed to add space between the bullet and the text */
+                                width: 1em; /* Also needed for space (tweak if needed) */
+                            }
+
+                            &:last-of-type {
+                                margin-bottom: 0;
+                            }
                         }
                     }
                 }
 
                 .right-block {
+                    padding: 15px 10px;
+                    background: linear-gradient(90deg, rgba($color-4, 1) 0%, rgba($color-5, 1) 50%, rgba($color-4, 1) 100%);
+
                     ul {
-                        li::before {
-                            font-family: "Font Awesome 5 Free";
-                            content: "\f058";
-                            color: $color-6; /* Change the color */
-                            font-weight: bold; /* If you want it to be bold */
-                            display: inline-block; /* Needed to add space between the bullet and the text */
-                            width: 1em; /* Also needed for space (tweak if needed) */
+                        li {
+                            margin: 10px 0;
+
+                            &::before {
+                                font-family: "Font Awesome 5 Free";
+                                content: "\f058";
+                                color: $color-6; /* Change the color */
+                                font-weight: bold; /* If you want it to be bold */
+                                display: inline-block; /* Needed to add space between the bullet and the text */
+                                width: 1em; /* Also needed for space (tweak if needed) */
+                            }
                         }
                     }
                 }
