--- a/assets/scss/includes/modules/manufacturer.scss
+++ b/assets/scss/includes/modules/manufacturer.scss
@@ -19,6 +19,18 @@
                         .name {
                             color: $color-7;
                         }
+
+                        .value {
+                            order: 3;
+                        }
+
+                        &:before {
+                            content: ''; /* Выводим линию */
+                            border-bottom: 1px dotted $color-10; /* Параметры линии */
+                            flex-grow: 1; /* Линия занимает всё доступное пространство */
+                            order: 2; /* Выводим вторым */
+                            margin: 0 5px; /* Расстояние от текста */
+                        }
                     }
                 }
             }
